--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proto-coverage-reporter",
   "version": "0.0.1",
   "main": "lib/index.js",
-  "author": "andoshin11 <shinglish11@gmail.com>",
+  "author": "ka-nabellinc <developer.kanabell@gmail.com>",
   "description": "Jest custome reporter for gRPC server E2E testing",
   "license": "MIT",
   "keywords": ["jest", "grpc", "protobuf", "coverage", "reporter", "E2E"],
